--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <ul id="MenuItems">
 
             <li><a href="index.html">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="index.html">About</a></li>
             <li><a href="#para">Info</a></li>
-            <li><a href="">Contacts</a></li>
+            <li><a href="#contact">Contacts</a></li>
 
             <li><a href="#skills">Skills</a></li>
             <li><a href="#certificate">Certificates</a> </li>
@@ -303,7 +303,7 @@
   <hr>
   <!--connect me -->
     
-  <div class="connect">
+  <div class="connect" id="contact">
 
       <div class="con1">
         <h2>Let's Get Connected</h2>
