--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
       <div class="row">
 
-        <div class="col-2">
-          <h1>WELCOME TO <br>MY PERSONAL PORT FOLIO</h1><br>
+         <div class="col-2">
+          <h1>WELCOME <br>TO MY PERSONAL<br> PORT FOLIO</h1><br>
           <p id="para">I think anything is possible . If you have the mindset and the will and desire to do it and put the time in
           </p>
 
@@ -83,12 +83,13 @@
 
       <div class="main1" >
 
-        <h1>Iam Mohammed Muddasir Arsalan</h1> <br><br>
-        <p> Iam an IT student
-          and my goal is to become a full stack developer.<br>Iam Persuing my batchelor's of engineering in MuffakhamJah
+         <h1>I am Mohammed Muddasir Arsalan</h1> <br><br>
+        <p> I am an IT student
+          and my goal is to become a full stack developer.<br>I am Persuing my bachelor's of engineering in MuffakhamJah
           College
-          of Engineering . Iam good at <b>Academics</b>and in <b>Programming</b>.I did projects in
-          <b>Web Devolopment</b>and in <b>IOT</b>.i also have created and static <b>E-Commerce </b> website.
+          of Engineering and Technology . Iam good at <b>Academics</b> and in <b>Programming</b>.I did projects in
+          <b>Web Devolopment</b> and in <b>IOT</b>.I also have created a static <b>E-Commerce </b> website.Click on projects 
+          to see the website
         </p>
 
         <button type="button" id="btn" ><a style="color: white;" target="_blank" href="https://arsalan-e-commerce.netlify.app/"> Projects</a></button>
