--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p id="para">I think anything is possible . If you have the mindset and the will and desire to do it and put the time in
           </p>
 
-          <a href="Arsalan Resume.pdf" class="btn" download="Arsalan Resume.pdf">Download Resume &#8595;</a>
+          <a href="Mudassir-Resume.pdf" class="btn" download="Mudassir-Resume.pdf">Download Resume &#8595;</a>
         </div>
 
         <div class="col-2">
